[FIX] - Fixed price bar on mobile

--- a/assets/css/personnalization.css
+++ b/assets/css/personnalization.css
@@ -151,12 +151,13 @@ select option:first-child {
     left: 0;
     right: 0;
     background-color: var(--primary-color-d2);
-    border: 2apx solid var(--primary-color);
+    border: 2px solid var(--primary-color);
     margin: 0.5rem;
     border-radius: 12px;
     padding: 1rem;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-between;
     z-index: 10;
     gap: 1rem;
@@ -236,6 +237,10 @@ form {
         position: fixed;
         top: 50%;
         transform: translateY(-50%);
+    }
+
+    .price-bar {
+        flex-direction: row;
     }
 }
 
